# media-similarity

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile.rust  Dockerfile.rust.dockerignore  README.md  docker-compose.yml  nginx.conf  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  unlighthouse.config.ts  vite.config.ts
.github/workflows/: tests.yml  verify.yml
backend/: Cargo.toml
backend/benches/: media_pipeline.rs  response_and_filters.rs  search_pipeline.rs
backend/benches/support/: mod.rs
backend/src/: app.rs  config.rs  lib.rs  main.rs
backend/src/api/: error.rs  health.rs  identities.rs  indexed_media.rs  indexing.rs  inverse_index.rs  jobs.rs  mod.rs  models.rs  readiness.rs  search.rs  smart_albums.rs  source_config.rs  state.rs  workflows.rs
backend/src/api/models/: actions.rs  list.rs  mod.rs
backend/src/api/search/: face_upload.rs  handlers.rs  media_upload.rs  mod.rs  query.rs
backend/src/api/source_config/: commands.rs  contracts.rs  mod.rs  queries.rs
backend/src/api/workflows/: config.rs  io.rs  mod.rs  validation.rs
backend/src/app/: lifecycle.rs  router.rs
backend/src/config/: defaults.rs  env.rs  mod.rs  parsing.rs  sources.rs  tests.rs  types.rs
backend/src/domain/: mod.rs  models.rs  smart_albums.rs
backend/src/storage/: mod.rs  qdrant.rs
backend/src/storage/qdrant/: dto.rs  filters.rs  http.rs  mod.rs  operations.rs  operations_methods_1.rs  operations_methods_2.rs  operations_methods_3.rs  payload_indexes.rs  schema.rs  store.rs
backend/src/workers/: albums.rs  deletion.rs  duplicates.rs  identities.rs  indexer.rs  jobs.rs  mod.rs  search.rs  smart_albums.rs  sources.rs  watcher.rs  workflows.rs
backend/src/workers/indexer/: ledger.rs  media.rs  mod.rs  planning.rs  planning_methods_1.rs  planning_methods_2.rs  planning_methods_3.rs  planning_methods_4.rs  run.rs
backend/src/workers/indexing/: plan_builders.rs  planner.rs  record_match.rs  results.rs
backend/src/workers/media/: audio.rs  embedder.rs  faces.rs  hashing.rs  image_io.rs  media.rs  mod.rs  models.rs  ocr.rs  pdf.rs  persons.rs  photo_metadata.rs  thumbnails.rs  video.rs  visual_embedding.rs  voice.rs
backend/src/workers/media/audio/: decode.rs  detection.rs  mod.rs  types.rs  uploads.rs
backend/src/workers/sources/: factory.rs  local.rs  mod.rs  object_store.rs  types.rs  uri.rs
backend/src/workers/workflows/: compiler.rs  defaults.rs  mod.rs  persistence.rs  types.rs  validation.rs
backend/tests/: deletion_readiness_health_api.rs  indexing_behavior_api.rs  indexing_job_api.rs  qdrant_smoke.rs  quality_corpus_manifest.rs  recognition_e2e.rs  sample_corpus_manifest.rs  search_behavior_api.rs  source_config_api.rs  static_image_api_harness.rs
backend/tests/support/: fake_qdrant.rs  harness.rs  media_fixtures.rs  mod.rs
benchmarks/: README.md  benchmark_baseline.py
benchmarks/baselines/: README.md
config/: media-sources.txt
docs/: image-similarity-embedder-spike.md  image-similarity-improvement-prd.md  image-similarity-investigation.md
docs/adr/: 0001-public-optional-quality-corpus.md  0002-cuda-first-native-transcription.md  0003-source-video-relative-transcript-slices.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts  identities.ts  index.ts  jobs.ts  models.ts  search.ts  smartAlbums.ts  sources.ts  workflows.ts
frontend/src/components/: DraftAlbumListItem.tsx  RegistryMetric.tsx  RegistrySection.tsx  app-header.tsx  filter-fields.tsx  indexing-configuration-page.tsx  inverse-index-page.tsx  jobs-panel.tsx  query-media-form.tsx  query-preview-panel.tsx  results-grid.tsx  scene-results-list.tsx  search-history-list.tsx  smart-albums-page.tsx  source-configuration-page.tsx  status-message.tsx  workflow-configuration-page.tsx
frontend/src/components/results/: PhotoMetadataDetails.tsx  media-links.tsx  media-tag-editor.tsx  result-card.tsx  result-formatting.ts  result-tags.tsx
frontend/src/indexing/: summary.ts
frontend/src/jobs/: job-utils.ts
frontend/src/lib/: format.ts  media.ts
frontend/src/search/: defaults.ts  filtering.ts  history.ts  preview.ts  sorting.ts  types.ts
frontend/src/types/: api.ts  index.ts  jobs.ts  media.ts  workflows.ts
frontend/src/views/: search-page.tsx
rust/: Cargo.toml
rust/shims/text-analysis-core/: Cargo.toml
rust/shims/text-analysis-core/src/: lib.rs
rust/shims/text-analysis-transcription/: Cargo.toml
rust/shims/text-analysis-transcription/src/: lib.rs
rust/src/: api.rs  audio.rs  config.rs  embedder.rs  faces.rs  image_io.rs  indexer.rs  jobs.rs  lib.rs  main.rs  media.rs  models.rs  ocr.rs  persons.rs  qdrant.rs  search.rs  sources.rs  thumbnails.rs  video.rs  visual_embedding.rs  voice.rs
rust/tests/: recognition_e2e.rs
scripts/: build_rust_extension.py  check_repo_hygiene.sh  prepare-dev-data.sh  run-playwright.sh  run-unlighthouse.mjs  run-unlighthouse.sh  run-with-compose-services.sh  seed_dummy_data.py  serve-unlighthouse-preview.mjs  service-smoke.sh  showcase.sh
src/frontend/: index.html
src/frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/image_similarity/: __init__.py  _rust_backend.py  api.py  config.py  embeddings.py  hashing.py  image_io.py  indexer.py  main.py  models.py  qdrant_store.py  search.py  sources.py  thumbnails.py
src/image_similarity/static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_config.py  test_hashing.py  test_image_io.py  test_indexer.py  test_main.py  test_models.py  test_qdrant_store.py  test_search.py  test_sources.py  test_thumbnails.py
tests/e2e/: albums.spec.ts  configuration.spec.ts  filters.spec.ts  history.spec.ts  identities.spec.ts  jobs.spec.ts  navigation.spec.ts  results.spec.ts  search.spec.ts  ui.spec.ts  workflows.spec.ts
tests/e2e/support/: api-mocks.ts  media-fixtures.ts  page-objects.ts
tests/fixtures/quality-corpus/: README.md  manifest.json
tests/fixtures/sample-corpus/: README.md  manifest.json
(+41 files in other folders)
