[project]
name = "image-similarity-service"
version = "0.1.0"
description = "Dockerized image similarity search with FastAPI, Qdrant, CLIP, and perceptual hashes."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "pillow>=10.4.0",
  "imagehash>=4.3.1",
  "sentence-transformers>=3.0.1",
  "qdrant-client>=1.11.0",
  "numpy>=1.26.0",
  "minio>=7.2.0",
  "opencv-python-headless>=4.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_similarity"]

[tool.pytest.ini_options]
addopts = "-p no:torchtyping"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: deterministic unit tests that do not require external services",
  "api: FastAPI route tests with dependency overrides",
  "integration: tests that may require external services",
  "benchmark: benchmark-oriented tests or checks",
  "slow: tests that are intentionally slower than the default suite",
]
