[package]
name = "image-similarity-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "image_similarity_service"

[[bin]]
name = "image-similarity-service"
path = "src/main.rs"

[dependencies]
audio-analysis-core = { path = "../../rust-packages/crates/audio/audio-analysis-core" }
audio-analysis-rhythm = { path = "../../rust-packages/crates/audio/audio-analysis-rhythm" }
audio-analysis-speakers = { path = "../../rust-packages/crates/audio/audio-analysis-speakers" }
image-analysis-core = { path = "../../rust-packages/crates/image/image-analysis-core" }
image-analysis-io = { path = "../../rust-packages/crates/image/image-analysis-io" }
image-analysis-onnx = { path = "../../rust-packages/crates/image/image-analysis-onnx", features = ["onnxruntime"] }
image-analysis-processing = { path = "../../rust-packages/crates/image/image-analysis-processing" }
jobs-core = { path = "../../rust-packages/crates/jobs/jobs-core" }
metastrip = "0.1"
model-runtime = { version = "0.1.0", path = "../../rust-packages/crates/runtime/model-runtime" }
text-analysis-core = { path = "shims/text-analysis-core" }
text-transcripts = { path = "../../rust-packages/crates/text/text-transcripts", features = ["native"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
num-rational = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
vector-analysis-core = { path = "../../rust-packages/crates/vector/vector-analysis-core" }
video-analysis-core = { path = "../../rust-packages/crates/video/video-analysis-core" }
video-analysis-detectors = { path = "../../rust-packages/crates/video/video-analysis-detectors" }
video-analysis-ffmpeg = { path = "../../rust-packages/crates/video/video-analysis-ffmpeg" }
video-analysis-split = { path = "../../rust-packages/crates/video/video-analysis-split" }
walkdir = "2"
object_store = { version = "0.13.2", features = ["aws"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
image-analysis-embeddings = { version = "0.1.0", path = "../../rust-packages/crates/image/image-analysis-embeddings" }
image-analysis-detection = { version = "0.1.0", path = "../../rust-packages/crates/image/image-analysis-detection" }
