[package]
name = "image-similarity-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "image_similarity_service"

[[bin]]
name = "image-similarity-service"
path = "src/main.rs"

[dependencies]
audio-analysis-core = { package = "moritzbrantner-audio-analysis-core", path = "../../rust-packages/crates/audio/audio-analysis-core" }
audio-analysis-rhythm = { package = "moritzbrantner-audio-analysis-rhythm", path = "../../rust-packages/crates/audio/audio-analysis-rhythm" }
audio-analysis-speakers = { package = "moritzbrantner-audio-analysis-speakers", path = "../../rust-packages/crates/audio/audio-analysis-speakers" }
image-analysis-core = { package = "moritzbrantner-image-analysis-core", path = "../../rust-packages/crates/image/image-analysis-core" }
image-analysis-io = { package = "moritzbrantner-image-analysis-io", path = "../../rust-packages/crates/image/image-analysis-io" }
image-analysis-onnx = { package = "moritzbrantner-image-analysis-onnx", path = "../../rust-packages/crates/image/image-analysis-onnx", features = ["onnxruntime"] }
image-analysis-processing = { package = "moritzbrantner-image-analysis-processing", path = "../../rust-packages/crates/image/image-analysis-processing" }
jobs-core = { package = "moritzbrantner-jobs-core", path = "../../rust-packages/crates/jobs/jobs-core" }
metastrip = "0.1"
model-runtime = { package = "moritzbrantner-model-runtime", version = "0.1.0", path = "../../rust-packages/crates/runtime/model-runtime" }
text-analysis-core = { path = "shims/text-analysis-core" }
text-transcripts = { package = "moritzbrantner-text-transcripts", path = "../../rust-packages/crates/text/text-transcripts", features = ["native"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
num-rational = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
vector-analysis-core = { package = "moritzbrantner-vector-analysis-core", path = "../../rust-packages/crates/vector/vector-analysis-core" }
video-analysis-core = { package = "moritzbrantner-video-analysis-core", path = "../../rust-packages/crates/video/video-analysis-core" }
video-analysis-detectors = { package = "moritzbrantner-video-analysis-detectors", path = "../../rust-packages/crates/video/video-analysis-detectors" }
video-analysis-ffmpeg = { package = "moritzbrantner-video-analysis-ffmpeg", path = "../../rust-packages/crates/video/video-analysis-ffmpeg" }
video-analysis-split = { package = "moritzbrantner-video-analysis-split", path = "../../rust-packages/crates/video/video-analysis-split" }
walkdir = "2"
object_store = { version = "0.13.2", features = ["aws"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
image-analysis-embeddings = { package = "moritzbrantner-image-analysis-embeddings", version = "0.1.0", path = "../../rust-packages/crates/image/image-analysis-embeddings" }
image-analysis-detection = { package = "moritzbrantner-image-analysis-detection", version = "0.1.0", path = "../../rust-packages/crates/image/image-analysis-detection" }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "media_pipeline"
harness = false

[[bench]]
name = "search_pipeline"
harness = false

[[bench]]
name = "response_and_filters"
harness = false
