[package]
name = "image-similarity-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "image_similarity_service"

[[bin]]
name = "image-similarity-service"
path = "src/main.rs"

[dependencies]
audio-analysis-core = { package = "moenarch-audio-analysis-core", version = "0.1.0" }
audio-analysis-rhythm = { package = "moenarch-audio-analysis-rhythm", version = "0.1.0" }
audio-analysis-speakers = { package = "moenarch-audio-analysis-speakers", version = "0.1.3" }
audio-analysis-transcription = { package = "moritzbrantner-audio-analysis-transcription", version = "0.1.7", features = ["candle", "cuda", "model-bundles"] }
image-analysis-core = { package = "moenarch-image-analysis-core", version = "0.1.0" }
image-analysis-io = { package = "moenarch-image-analysis-io", version = "0.1.0" }
image-analysis-processing = { package = "moenarch-image-analysis-processing", version = "0.1.0" }
jobs-core = { package = "moenarch-jobs-core", version = "0.1.1" }
metastrip = "0.1"
model-runtime = { package = "moenarch-model-runtime", version = "0.1.0" }
runtime-onnx = { package = "moenarch-runtime-onnx", version = "0.1.0", features = ["onnxruntime"] }
text-analysis-core = { path = "shims/text-analysis-core" }
text-transcripts = { package = "moenarch-text-transcripts", version = "0.1.2", features = ["native"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
num-rational = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
vector-analysis-core = { package = "moenarch-vector-analysis-core", version = "0.1.0" }
video-analysis-core = { package = "moenarch-video-analysis-core", version = "0.1.3" }
video-analysis-detectors = { package = "moenarch-video-analysis-detectors", version = "0.1.0" }
video-analysis-ffmpeg = { package = "moenarch-video-analysis-ffmpeg", version = "0.1.0" }
video-analysis-split = { package = "moenarch-video-analysis-split", version = "0.1.0" }
walkdir = "2"
object_store = { version = "0.13.2", features = ["aws"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "8.2.0"
image-analysis-embeddings = { package = "moenarch-image-analysis-embeddings", version = "0.1.0", features = ["onnx"] }
image-analysis-detection = { package = "moenarch-image-analysis-detection", version = "0.1.0", features = ["onnx"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "media_pipeline"
harness = false

[[bench]]
name = "search_pipeline"
harness = false

[[bench]]
name = "response_and_filters"
harness = false
