[package]
name = "image-similarity-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-similarity-service"
path = "src/main.rs"

[dependencies]
image-analysis-core = { path = "../../rust-packages/crates/image/image-analysis-core" }
image-analysis-io = { path = "../../rust-packages/crates/image/image-analysis-io" }
image-analysis-processing = { path = "../../rust-packages/crates/image/image-analysis-processing" }
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
pyo3 = { version = "0.27.1", features = ["abi3-py311", "extension-module"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
vector-analysis-core = { path = "../../rust-packages/crates/vector/vector-analysis-core" }
walkdir = "2"
