[package]
name = "image-similarity-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "image-similarity-service"
path = "src/main.rs"

[dependencies]
audio-analysis-core = { path = "../../rust-packages/crates/audio/audio-analysis-core" }
audio-analysis-rhythm = { path = "../../rust-packages/crates/audio/audio-analysis-rhythm" }
audio-analysis-speakers = { path = "../../rust-packages/crates/audio/audio-analysis-speakers" }
image-analysis-core = { path = "../../rust-packages/crates/image/image-analysis-core" }
image-analysis-io = { path = "../../rust-packages/crates/image/image-analysis-io" }
image-analysis-processing = { path = "../../rust-packages/crates/image/image-analysis-processing" }
text-analysis-core = { path = "shims/text-analysis-core" }
text-analysis-transcription = { path = "shims/text-analysis-transcription" }
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif"] }
num-rational = "0.4"
pyo3 = { version = "0.27.1", features = ["abi3-py311", "extension-module"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
vector-analysis-core = { path = "../../rust-packages/crates/vector/vector-analysis-core" }
video-analysis-core = { path = "../../rust-packages/crates/video/video-analysis-core" }
video-analysis-detectors = { path = "../../rust-packages/crates/video/video-analysis-detectors" }
video-analysis-ffmpeg = { path = "../../rust-packages/crates/video/video-analysis-ffmpeg" }
video-analysis-split = { path = "../../rust-packages/crates/video/video-analysis-split" }
walkdir = "2"
